состояния радио и чекбоксов

--- a/source/index.html
+++ b/source/index.html
@@ -234,7 +234,7 @@
                 </li>
                 <li class="milk__item">
                   <label class="radio-label button">
-                    <input class="radio-label__input visually-hidden" type="radio" name="milk" value="no-milk" disabled checked>
+                    <input class="radio-label__input visually-hidden" type="radio" name="milk" value="no-milk" disabled>
                     <span class="radio-label__mark"></span>
                     <span class="radio-label__description">Без молока</span>
                   </label>
@@ -274,7 +274,7 @@
                 </li>
                 <li class="country__item">
                   <label class="checkbox-label button">
-                    <input class="checkbox-label__input visually-hidden" type="checkbox" name="Peru" disabled checked>
+                    <input class="checkbox-label__input visually-hidden" type="checkbox" name="Peru" disabled>
                     <span class="checkbox-label__mark"></span>
                     <span class="checkbox-label__description">Перу</span>
                   </label>
