состояние ползунка в каталоге при disabled

--- a/source/index.html
+++ b/source/index.html
@@ -190,10 +190,10 @@
               <legend class="price__title">Цена</legend>
               <div class="range-scale">
                 <div class="range-scale__bar">
-                  <button class="range-scale__toggle range-scale__toggle--min" type="button">
+                  <button class="range-scale__toggle range-scale__toggle--min" type="button" disabled>
                     <span class="visually-hidden">Изменить минимальную цену</span>
                   </button>
-                  <button class="range-scale__toggle range-scale__toggle--max" type="button">
+                  <button class="range-scale__toggle range-scale__toggle--max" type="button" disabled>
                     <span class="visually-hidden">Изменить максимальную цену</span>
                   </button>
                 </div>
