--- a/source/index.html
+++ b/source/index.html
@@ -72,11 +72,14 @@
 
     <div class="swiper">
       <div class="swiper-wrapper">
-        <div class="swiper-slide">
+        <div class="swiper-slide swiper-slide--white">
           <picture>
-            <source media="(min-width: 1440px)" srcset="/img/flat-white-desktop.png" width="600" height="600">
-            <source media="(min-width: 768px)" srcset="/img/flat-white-tablet.png" width="476" height="476">
-            <img class="swiper__img" src="/img/flat-white.png" width="280" height="280" alt="Банка с кофейным напитком">
+            <source media="(min-width: 1440px)" srcset="/img/flat-white-desktop.png, /img/flat-white-desktop@2x.png 2x"
+              width="600" height="600">
+            <source media="(min-width: 768px)" srcset="/img/flat-white-tablet.png, /img/flat-white-tablet@2x.png 2x"
+              width="476" height="476">
+            <img class="swiper__img" src="/img/flat-white.png" srcset="/img/flat-white@2x.png 2x" width="280"
+              height="280" alt="Белая банка с напитком Декаф Флэт Уайт">
           </picture>
           <div class="swiper__container">
             <p class="swiper__badge">Новинка!</p>
@@ -91,48 +94,52 @@
             </div>
           </div>
         </div>
-        <div class="swiper-slide">
+        <div class="swiper-slide swiper-slide--purple">
           <picture>
-            <source media="(min-width: 1440px)" srcset="/img/flat-pink-desktop.png" width="600" height="600">
-            <source media="(min-width: 768px)" srcset="/img/flat-pink-tablet.png" width="476" height="476">
-            <img class="swiper__img" src="/img/flat-pink.png" width="280" height="280" alt="Банка с кофейным напитком">
+            <source media="(min-width: 1440px)" srcset="/img/flat-pink-desktop.png, /img/flat-pink-desktop@2x.png 2x"
+              width="600" height="600">
+            <source media="(min-width: 768px)" srcset="/img/flat-pink-tablet.png, /img/flat-pink-tablet@2x.png 2x"
+              width="476" height="476">
+            <img class="swiper__img" src="/img/flat-pink.png" srcset="/img/flat-pink@2x.png 2x" width="280" height="280"
+              alt="Фиолетовая банка с напитком Лавайдовый Латте">
           </picture>
           <div class="swiper__container">
             <p class="swiper__badge">Новинка!</p>
-            <h2 class="swiper__title">Декаф Флэт Уайт</h2>
-            <p class="swiper__description">Свежесваренный кофе без кофеина из Эфиопии<br> с натуральным фермерским
-              молоком — то,
-              что нужно для расслабления после тяжёлого рабочего дня</p>
+            <h2 class="swiper__title">Лавандовый Латте</h2>
+            <p class="swiper__description">Невероятное сочетание перуанской высокогорной арабики с молоком ламы и
+              лавандовым сиропом унесёт вас прямо на вершину Радужных гор</p>
             <div class="swiper__buy">
-              <p class="swiper__price-old">295₽</p>
-              <p class="swiper__price">225₽</p>
+              <p class="swiper__price-old">285₽</p>
+              <p class="swiper__price">265₽</p>
               <button class="swiper__order button">Заказать</button>
             </div>
           </div>
         </div>
-        <div class="swiper-slide">
+        <div class="swiper-slide swiper-slide--black">
           <picture>
-            <source media="(min-width: 1440px)" srcset="/img/flat-black-desktop.png" width="600" height="600">
-            <source media="(min-width: 768px)" srcset="/img/flat-black-tablet.png" width="476" height="476">
-            <img class="swiper__img" src="/img/flat-black.png" width="280" height="280" alt="Банка с кофейным напитком">
+            <source media="(min-width: 1440px)" srcset="/img/flat-black-desktop.png, /img/flat-black-desktop@2x.png 2x"
+              width="600" height="600">
+            <source media="(min-width: 768px)" srcset="/img/flat-black-tablet.png, /img/flat-black-tablet@2x.png 2x"
+              width="476" height="476">
+            <img class="swiper__img" src="/img/flat-black.png" srcset="/img/flat-black@2x.png 2x" width="280"
+              height="280" alt="Черная банка с напитком Тройной Эспрессо">
           </picture>
           <div class="swiper__container">
             <p class="swiper__badge">Новинка!</p>
-            <h2 class="swiper__title">Декаф Флэт Уайт</h2>
-            <p class="swiper__description">Свежесваренный кофе без кофеина из Эфиопии<br> с натуральным фермерским
-              молоком — то,
-              что нужно для расслабления после тяжёлого рабочего дня</p>
+            <h2 class="swiper__title">Тройной Эспрессо</h2>
+            <p class="swiper__description">Мощнее укола адреналина, чернее самой тёмной ночи, этот тройной эспрессо из
+              Колумбии покажет вам, что такое настоящая бодрость</p>
             <div class="swiper__buy">
-              <p class="swiper__price-old">295₽</p>
-              <p class="swiper__price">225₽</p>
+              <p class="swiper__price-old">395₽</p>
+              <p class="swiper__price">375₽</p>
               <button class="swiper__order button">Заказать</button>
             </div>
           </div>
         </div>
       </div>
       <div class="swiper-pagination"></div>
-      <div class="swiper-button-prev"></div>
-      <div class="swiper-button-next"></div>
+      <button class="swiper-button-prev"></button>
+      <button class="swiper-button-next"></button>
     </div>
 
     <section class="advantages">
@@ -190,20 +197,20 @@
               <legend class="price__title">Цена</legend>
               <div class="range-scale">
                 <div class="range-scale__bar">
-                  <button class="range-scale__toggle range-scale__toggle--min" type="button" disabled>
+                  <button class="range-scale__toggle range-scale__toggle--min" type="button">
                     <span class="visually-hidden">Изменить минимальную цену</span>
                   </button>
-                  <button class="range-scale__toggle range-scale__toggle--max" type="button" disabled>
+                  <button class="range-scale__toggle range-scale__toggle--max" type="button">
                     <span class="visually-hidden">Изменить максимальную цену</span>
                   </button>
                 </div>
               </div>
               <div class="price__wrapper">
                 <label class="price-label">
-                  <input class="price-label__input price-label__input-min" type="number" value="0" name="min-price">
+                  <input class="price-label__input price-label__input-min" type="number" name="min-price" placeholder="0">
                 </label>
                 <label class="price-label">
-                  <input class="price-label__input price-label__input-max" type="number" value="900" name="max-price">
+                  <input class="price-label__input price-label__input-max" type="number" value="900" name="max-price" placeholder="0">
                 </label>
               </div>
             </fieldset>
@@ -424,7 +431,7 @@
         <div class="catalog__pagination pagination">
           <ul class="pagination__list">
             <li class="pagination__item pagination__item--previous">
-              <button class="pagination__button">
+              <button class="pagination__button-svg">
                 <svg class="pagination__svg" width="10" height="10" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <use xlink:href="img/icons/stack.svg#arrow-left-pagination"></use>
                 </svg>
@@ -441,7 +448,7 @@
               <button class="pagination__number pagination__button">3</button>
             </li>
             <li class="pagination__item pagination__item--next">
-              <button class="pagination__button">
+              <button class="pagination__button-svg">
                 <svg class="pagination__svg pagination__svg--right" width="10" height="10" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <use xlink:href="img/icons/stack.svg#arrow-left-pagination"></use>
@@ -465,7 +472,7 @@
       <div class="main-footer__logo">
         <picture>
           <source media="(min-width: 768px)" srcset="img/logo-big.svg" width="170" height="36">
-          <img class="intro__img" src="img/logo-middle.svg" width="82" height="36" alt="Логотип Drink2Go">
+          <img class="main-footer__logo-img" src="img/logo-middle.svg" width="82" height="36" alt="Логотип Drink2Go">
         </picture>
       </div>
       <p class="main-footer__text">Интернет-магазин кофейных напитков</p>
@@ -595,14 +602,13 @@
     <section class="main-footer__develop develop">
       <h2 class="visually-hidden">Develop info</h2>
       <p class="develop__text">Разработано в</p>
-      <div class="develop__wrapper button" href="https://htmlacademy.ru/intensive/adaptive">
-        <p class="develop__wrapper-text">HTML Academy</p>
-        <a class="develop__link" href="#">
-          <svg class="develop__svg" width="12" height="16" xmlns="http://www.w3.org/2000/svg">
-            <use xlink:href="img/icons/stack.svg#logo-htmlacademy"></use>
-          </svg>
-        </a>
-      </div>
+      <a class="develop__link" href="https://htmlacademy.ru/intensive/adaptive">
+        <span class="develop__button-text">HTML Academy
+        <svg class="develop__button-svg" width="12" height="16" xmlns="http://www.w3.org/2000/svg">
+          <use xlink:href="img/icons/stack.svg#logo-htmlacademy"></use>
+        </svg>
+      </span>
+      </a>
     </section>
   </footer>
 
