--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
 <body class="page__body">
   <header class="main-header">
     <div class="main-header__wrapper">
-      <a class="main-header__logo header-logo">
+      <a class="main-header__logo header-logo" href="#">
         <picture>
           <source media="(min-width: 1440px)" srcset="./img/logo-big.svg">
           <source media="(min-width: 768px)" srcset="./img/logo-middle.svg">
@@ -387,6 +387,7 @@
                 <img class="card__img" src="/img/catalog/can-black.png" srcset="/img/catalog/can-black@2x.png 2x"
                   width="130" height="188" alt="Банка с напитком">
               </picture>
+            </a>
             <a href="can-black">
               <h3 class="card__title">Декаф Флэт Уайт</h3>
             </a>
@@ -514,9 +515,12 @@
       <h2 class="visually-hidden">Магазин Drink2Go на карте</h2>
       <div class="map__container map__container--no-js" id="map"></div>
       <picture>
-        <source media="(min-width: 1440px)" srcset="img/map-desktop.png 1x, img/map-desktop@2x.png 2x" width="1440" height="540">
-        <source media="(min-width: 768px)" srcset="img/map-tablet.png 1x, img/map-tablet@2x.png 2x" width="768" height="480">
-        <img class="map__container-image" src="img/map.png" srcset="img/map@2x.png 2x" width="320" height="420" alt="Логотип Drink2Go">
+        <source media="(min-width: 1440px)" srcset="img/map-desktop.png 1x, img/map-desktop@2x.png 2x" width="1440"
+          height="540">
+        <source media="(min-width: 768px)" srcset="img/map-tablet.png 1x, img/map-tablet@2x.png 2x" width="768"
+          height="480">
+        <img class="map__container-image" src="img/map.png" srcset="img/map@2x.png 2x" width="320" height="420"
+          alt="Логотип Drink2Go">
       </picture>
     </section>
   </main>
