исправляет по критериям

--- a/source/index.html
+++ b/source/index.html
@@ -18,9 +18,9 @@
     <div class="main-header__wrapper">
       <a class="main-header__logo header-logo" href="#">
         <picture>
-          <source media="(min-width: 1440px)" srcset="./img/logo-big.svg">
-          <source media="(min-width: 768px)" srcset="./img/logo-middle.svg">
-          <img class="header-logo__image" src="./img/logo-small.svg" width="32" height="36" alt="Логотип Drink2Go">
+          <source media="(min-width: 1440px)" srcset="img/logo-big.svg">
+          <source media="(min-width: 768px)" srcset="img/logo-middle.svg">
+          <img class="header-logo__image" src="img/logo-small.svg" width="32" height="36" alt="Логотип Drink2Go">
         </picture>
       </a>
     </div>
@@ -78,16 +78,16 @@
         <div class="swiper-slide swiper-slide--white">
           <picture>
             <source type="image/webp" media="(min-width: 1440px)"
-              srcset="/img/flat-white-desktop.webp 1x, /img/flat-white-desktop@2x.webp 2x" width="600" height="600">
+              srcset="img/flat-white-desktop.webp 1x, img/flat-white-desktop@2x.webp 2x" width="600" height="600">
             <source type="image/webp" media="(min-width: 768px)"
-              srcset="/img/flat-white-tablet.webp 1x, /img/flat-white-tablet@2x.webp 2x" width="476" height="476">
-            <source type="image/webp" srcset="/img/flat-white-tablet.webp 1x, /img/flat-white-tablet@2x.webp 2x"
+              srcset="img/flat-white-tablet.webp 1x, img/flat-white-tablet@2x.webp 2x" width="476" height="476">
+            <source type="image/webp" srcset="img/flat-white-tablet.webp 1x, img/flat-white-tablet@2x.webp 2x"
               width="280" height="280">
-            <source media="(min-width: 1440px)" srcset="/img/flat-white-desktop.png, /img/flat-white-desktop@2x.png 2x"
+            <source media="(min-width: 1440px)" srcset="img/flat-white-desktop.png, img/flat-white-desktop@2x.png 2x"
               width="600" height="600">
-            <source media="(min-width: 768px)" srcset="/img/flat-white-tablet.png, /img/flat-white-tablet@2x.png 2x"
+            <source media="(min-width: 768px)" srcset="img/flat-white-tablet.png, img/flat-white-tablet@2x.png 2x"
               width="476" height="476">
-            <img class="swiper__img" src="/img/flat-white.png" srcset="/img/flat-white@2x.png 2x" width="280"
+            <img class="swiper__img" src="img/flat-white.png" srcset="img/flat-white@2x.png 2x" width="280"
               height="280" alt="Банка с напитком Декаф Флэт Уайт">
           </picture>
           <div class="swiper__container">
@@ -106,16 +106,16 @@
         <div class="swiper-slide swiper-slide--purple">
           <picture>
             <source type="image/webp" media="(min-width: 1440px)"
-              srcset="/img/flat-pink-desktop.webp 1x, /img/flat-pink-desktop@2x.webp 2x" width="600" height="600">
+              srcset="img/flat-pink-desktop.webp 1x, img/flat-pink-desktop@2x.webp 2x" width="600" height="600">
             <source type="image/webp" media="(min-width: 768px)"
-              srcset="/img/flat-pink-tablet.webp 1x, /img/flat-pink-tablet@2x.webp 2x" width="476" height="476">
-            <source type="image/webp" srcset="/img/flat-pink-tablet.webp 1x, /img/flat-pink-tablet@2x.webp 2x"
+              srcset="img/flat-pink-tablet.webp 1x, img/flat-pink-tablet@2x.webp 2x" width="476" height="476">
+            <source type="image/webp" srcset="img/flat-pink-tablet.webp 1x, img/flat-pink-tablet@2x.webp 2x"
               width="280" height="280">
-            <source media="(min-width: 1440px)" srcset="/img/flat-pink-desktop.png, /img/flat-pink-desktop@2x.png 2x"
+            <source media="(min-width: 1440px)" srcset="img/flat-pink-desktop.png, img/flat-pink-desktop@2x.png 2x"
               width="600" height="600">
-            <source media="(min-width: 768px)" srcset="/img/flat-pink-tablet.png, /img/flat-pink-tablet@2x.png 2x"
+            <source media="(min-width: 768px)" srcset="img/flat-pink-tablet.png, img/flat-pink-tablet@2x.png 2x"
               width="476" height="476">
-            <img class="swiper__img" src="/img/flat-pink.png" srcset="/img/flat-pink@2x.png 2x" width="280" height="280"
+            <img class="swiper__img" src="img/flat-pink.png" srcset="img/flat-pink@2x.png 2x" width="280" height="280"
               alt="Банка с напитком Лавайдовый Латте">
           </picture>
           <div class="swiper__container">
@@ -133,16 +133,16 @@
         <div class="swiper-slide swiper-slide--black">
           <picture>
             <source type="image/webp" media="(min-width: 1440px)"
-              srcset="/img/flat-black-desktop.webp 1x, /img/flat-black-desktop@2x.webp 2x" width="600" height="600">
+              srcset="img/flat-black-desktop.webp 1x, img/flat-black-desktop@2x.webp 2x" width="600" height="600">
             <source type="image/webp" media="(min-width: 768px)"
-              srcset="/img/flat-black-tablet.webp 1x, /img/flat-black-tablet@2x.webp 2x" width="476" height="476">
-            <source type="image/webp" srcset="/img/flat-black-tablet.webp 1x, /img/flat-black-tablet@2x.webp 2x"
+              srcset="img/flat-black-tablet.webp 1x, img/flat-black-tablet@2x.webp 2x" width="476" height="476">
+            <source type="image/webp" srcset="img/flat-black-tablet.webp 1x, img/flat-black-tablet@2x.webp 2x"
               width="280" height="280">
-            <source media="(min-width: 1440px)" srcset="/img/flat-black-desktop.png, /img/flat-black-desktop@2x.png 2x"
+            <source media="(min-width: 1440px)" srcset="img/flat-black-desktop.png, img/flat-black-desktop@2x.png 2x"
               width="600" height="600">
-            <source media="(min-width: 768px)" srcset="/img/flat-black-tablet.png, /img/flat-black-tablet@2x.png 2x"
+            <source media="(min-width: 768px)" srcset="img/flat-black-tablet.png, img/flat-black-tablet@2x.png 2x"
               width="476" height="476">
-            <img class="swiper__img" src="/img/flat-black.png" srcset="/img/flat-black@2x.png 2x" width="280"
+            <img class="swiper__img" src="img/flat-black.png" srcset="img/flat-black@2x.png 2x" width="280"
               height="280" alt="Банка с напитком Тройной Эспрессо">
           </picture>
           <div class="swiper__container">
@@ -334,9 +334,9 @@
           <li class="catalog__item card">
             <a href="can-white">
               <picture>
-                <source type="image/webp" srcset="/img/catalog/can-white.webp 1x, /img/catalog/can-white@2x.webp 2x"
+                <source type="image/webp" srcset="img/catalog/can-white.webp 1x, img/catalog/can-white@2x.webp 2x"
                   width="130" height="188">
-                <img class="card__img" src="/img/catalog/can-white.png" srcset="/img/catalog/can-white@2x.png 2x"
+                <img class="card__img" src="img/catalog/can-white.png" srcset="img/catalog/can-white@2x.png 2x"
                   width="130" height="188" alt="Банка с напитком">
               </picture>
             </a>
@@ -358,9 +358,9 @@
           <li class="catalog__item card catalog__item--current">
             <a href="can-purple">
               <picture>
-                <source type="image/webp" srcset="/img/catalog/can-purple.webp 1x, /img/catalog/can-purple@2x.webp 2x"
+                <source type="image/webp" srcset="img/catalog/can-purple.webp 1x, img/catalog/can-purple@2x.webp 2x"
                   width="130" height="188">
-                <img class="card__img" src="/img/catalog/can-purple.png" srcset="/img/catalog/can-purple@2x.png 2x"
+                <img class="card__img" src="img/catalog/can-purple.png" srcset="img/catalog/can-purple@2x.png 2x"
                   width="130" height="188" alt="Банка с напитком">
               </picture>
             </a>
@@ -382,9 +382,9 @@
           <li class="catalog__item card">
             <a href="can-black">
               <picture>
-                <source type="image/webp" srcset="/img/catalog/can-black.webp 1x, /img/catalog/can-black@2x.webp 2x"
+                <source type="image/webp" srcset="img/catalog/can-black.webp 1x, img/catalog/can-black@2x.webp 2x"
                   width="130" height="188">
-                <img class="card__img" src="/img/catalog/can-black.png" srcset="/img/catalog/can-black@2x.png 2x"
+                <img class="card__img" src="img/catalog/can-black.png" srcset="img/catalog/can-black@2x.png 2x"
                   width="130" height="188" alt="Банка с напитком">
               </picture>
             </a>
@@ -406,9 +406,9 @@
           <li class="catalog__item card">
             <a href="can-pink">
               <picture>
-                <source type="image/webp" srcset="/img/catalog/can-pink.webp 1x, /img/catalog/can-pink@2x.webp 2x"
+                <source type="image/webp" srcset="img/catalog/can-pink.webp 1x, img/catalog/can-pink@2x.webp 2x"
                   width="130" height="188">
-                <img class="card__img" src="/img/catalog/can-pink.png" srcset="/img/catalog/can-pink@2x.png 2x"
+                <img class="card__img" src="img/catalog/can-pink.png" srcset="img/catalog/can-pink@2x.png 2x"
                   width="130" height="188" alt="Банка с кофейным напитком">
               </picture>
             </a>
@@ -430,9 +430,9 @@
           <li class="catalog__item card">
             <a href="can-brown">
               <picture>
-                <source type="image/webp" srcset="/img/catalog/can-brown.webp 1x, /img/catalog/can-brown@2x.webp 2x"
+                <source type="image/webp" srcset="img/catalog/can-brown.webp 1x, img/catalog/can-brown@2x.webp 2x"
                   width="130" height="188">
-                <img class="card__img" src="/img/catalog/can-brown.png" srcset="/img/catalog/can-brown@2x.png 2x"
+                <img class="card__img" src="img/catalog/can-brown.png" srcset="img/catalog/can-brown@2x.png 2x"
                   width="130" height="188" alt="Банка с кофейным напитком">
               </picture>
             </a>
@@ -454,9 +454,9 @@
           <li class="catalog__item card">
             <a href="can-yellow">
               <picture>
-                <source type="image/webp" srcset="/img/catalog/can-yellow.webp 1x, /img/catalog/can-yellow@2x.webp 2x"
+                <source type="image/webp" srcset="img/catalog/can-yellow.webp 1x, img/catalog/can-yellow@2x.webp 2x"
                   width="130" height="188">
-                <img class="card__img" src="/img/catalog/can-yellow.png" srcset="/img/catalog/can-yellow@2x.png 2x"
+                <img class="card__img" src="img/catalog/can-yellow.png" srcset="img/catalog/can-yellow@2x.png 2x"
                   width="130" height="188" alt="Банка с кофейным напитком">
               </picture>
             </a>
@@ -668,7 +668,7 @@
     </section>
   </footer>
 
-  <script src="./js/script.js" defer></script>
+  <script src="js/script.js" defer></script>
   <script src="js/leaflet.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 </body>
